Closed Bug 529057 Opened 16 years ago Closed 16 years ago

Fix build bustage after bug 515051 land

Categories

(Thunderbird :: General, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.1a1

People

(Reporter: mayhemer, Assigned: BenB)

References

Details

Attachments

(2 files, 2 obsolete files)

From Ben Bucksch: FYI, this broke Thunderbird. http://tinderbox.mozilla.org/showbuilds.cgi?tree=Thunderbird mailnews/news/src/nsNNTPProtocol.cpp:917: error: no matching function for call to ‘nsIStreamListenerTee::Init(nsCOMPtr<nsIStreamListener>&, nsCOMPtr<nsIOutputStream>&)’ ../../../mozilla/dist/include/nsIStreamListenerTee.h:55: note: candidates are: virtual nsresult nsIStreamListenerTee::Init(nsIStreamListener*, nsIOutputStream*, nsIRequestObserver*)
Going to fix this immediately.
Assignee: nobody → honzab.moz
Status: NEW → ASSIGNED
Attached patch Fix v1 (obsolete) — Splinter Review
Quick fix. Just pass NULL to the new parameter. I don't know whether that is correct, but given that it's |optional|, that should be fine. Sorry for beating you to it, but I needed a working Thunderbird :).
Attachment #412649 - Flags: review?(honzab.moz)
Comment on attachment 412649 [details] [diff] [review] Fix v1 Thanks for the quicker fix. I'm just pulling the tree, it takes time, I do it after a really long time, normally I don't work on comm-central. Please also fix imap: http://mxr.mozilla.org/comm-central/source/mailnews/imap/src/nsImapProtocol.cpp#8620
Attachment #412649 - Flags: review?(honzab.moz) → review-
And yes, to just pass null is absolutely correct. It's enough to take a look into the patch for m-c in bug 515051 ;)
Attached patch Fix, v2 (obsolete) — Splinter Review
There was another instance in IMAP.
Attachment #412649 - Attachment is obsolete: true
Attachment #412652 - Flags: review?(honzab.moz)
Comment on attachment 412652 [details] [diff] [review] Fix, v2 Thank you!
Attachment #412652 - Flags: review?(honzab.moz) → review+
use nsnull instead of NULL
Attachment #412652 - Attachment is obsolete: true
Attachment #412654 - Flags: review?(honzab.moz)
Attachment #412654 - Flags: review?(honzab.moz) → review+
Blocks: 515051
Attachment #412654 - Attachment description: Fix, v3 → Fix, v3 [Re-checkin comment 9]
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Thanks
Assignee: honzab.moz → ben.bucksch
Target Milestone: --- → Thunderbird 3.1a1
Depends on: 529668
Version: unspecified → Trunk
yeah, so this breaks TB trunk with mozilla 1.9.2 branch, so we're going to need something special for 1.9.2 w/ tb trunk. I see that the original has landed on 1.9.2, in a particular way, so TB may need some #ifdef 1.9.2 branch stuff may be needed. I'll try to fix it.
Attachment #413481 - Flags: superreview?(bugzilla)
Attachment #413481 - Flags: review?(honzab.moz)
(In reply to comment #11) > yeah, so this breaks TB trunk with mozilla 1.9.2 branch, so we're going to need > something special for 1.9.2 w/ tb trunk. I see that the original has landed on > 1.9.2, in a particular way, so TB may need some #ifdef 1.9.2 branch stuff may > be needed. I'll try to fix it. Yeah I noticed that too, but bug 515051 is scheduled to land on 1.9.2 soon. Honza any idea when this would be? (If we had tinderboxes I'd have fixed it earlier, as we don't I've kinda been ignoring it a bit).
(In reply to comment #13) > Yeah I noticed that too, but bug 515051 is scheduled to land on 1.9.2 soon. > Honza any idea when this would be? (If we had tinderboxes I'd have fixed it > earlier, as we don't I've kinda been ignoring it a bit). http://hg.mozilla.org/releases/mozilla-1.9.2/rev/f64a9e7d65f4 There is nothing to land on 1.9.2 left. There is no change to the original interface, that's the problem.
Comment on attachment 413481 [details] [diff] [review] fix tb trunk with 1.9.2 bustage - checked in. >diff --git a/mailnews/imap/src/nsImapProtocol.cpp b/mailnews/imap/src/nsImapProtocol.cpp >- rv = tee->Init(m_channelListener, out, nsnull); >+ rv = tee->Init(m_channelListener, out >+#ifndef MOZILLA_1_9_2_BRANCH >+ , nsnull >+#endif >+ ); Maybe just fix the indention here. Will this ever get compiled with 1.9.1? If so, then the fix is wrong. I see I had to add a new method even to the original interface... r=honzab
Attachment #413481 - Flags: review?(honzab.moz) → review+
No, this won't ever get checked in to 1.9.1
Attachment #413481 - Flags: superreview?(bugzilla) → superreview+
Attachment #413481 - Attachment description: fix tb trunk with 1.9.2 bustage → fix tb trunk with 1.9.2 bustage - checked in.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: