Fix build bustage. Bug 529057 caused by bug 515051, r=honza, a=dmose StreamListenerTee now has an additional, optional param, but in C++, we need to pass it (as null).