mailnews/imap/src/nsImapProtocol.cpp
@@ -8617,7 +8617,7 @@ nsImapMockChannel::OnCacheEntryAvailable(nsICacheEntryDescriptor *entry, nsCache
         rv = entry->OpenOutputStream(0, getter_AddRefs(out));
         if (NS_SUCCEEDED(rv))
         {
-          rv = tee->Init(m_channelListener, out);
+          rv = tee->Init(m_channelListener, out, nsnull);
           m_channelListener = do_QueryInterface(tee);
         }
       }
